# traefik-edge-operator

./: Cargo.toml  Dockerfile  LICENSE  README.md  build.rs
.github/workflows/: helm.yaml  image.yaml
charts/traefik-edge-operator/: Chart.yaml  values.yaml
charts/traefik-edge-operator-crds/: Chart.yaml
charts/traefik-edge-operator-crds/templates/: ingressgroup.yaml
charts/traefik-edge-operator/templates/: deployment.yaml  rbac.yaml
external-crds/: cm-Certificate.yaml  cm-ClusterIssuer.yaml  tr-Middleware.yaml
src/: config.rs  crds.rs  error.rs  health.rs  leader.rs  main.rs  reconciler.rs  resources.rs
src/reconciler/: certificates.rs  naming.rs  nodes.rs  routes.rs  traefik.rs
