[package]
name = "traefik-edge-operator"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
envy = "0.4"
futures = "0.3"
hex = "0.4"
k8s-openapi = { version = "0.27.1", features = ["latest", "schemars"] }
kube = { version = "3.1.0", features = ["client", "derive", "runtime", "rustls-tls"] }
kube-lease-manager = "0.11"
schemars = "1.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[build-dependencies]
anyhow = "1"
kopium = { version = "0.23", default-features = false }
k8s-openapi = { version = "0.27.1", features = ["latest"] }
serde-saphyr = "0.0.27"
